welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:46: error: ')' expected but 'while' found.
	while (posfin()==true && (getDirection() == Direction.OUEST)
        ^SnakeBuggle:52: error: ')' expected but '}' found.
}
^